# gatewayEMS

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: tests.yml
src/Config/: config.ini  config.py
src/Core/: config.py  watchdog.py
src/Database/: connection.py  repository.py  service.py
src/Modbus/: app.py  client.py  modbusmap.py  read.py  util.py
src/Modbus/maps/: Modbus_DTSU666.json
src/Models/: model.py
src/Task/: task.py
src/Utils/: logging.py  utils.py
tests/: README.md  __init__.py  conftest.py
tests/e2e/: __init__.py
tests/fixtures/: __init__.py  config_samples.py  influxdb_fixtures.py  modbus_data.py
tests/integration/: __init__.py  test_influxdb_flow.py.skip  test_modbus_app.py  test_watchdog.py
tests/unit/: __init__.py  test_config.py  test_models.py  test_utils.py
tests/unit/database/: __init__.py  test_connection.py.skip  test_model_integration.py  test_repository.py.skip  test_service.py.skip
tests/unit/modbus/: __init__.py  test_blockreading.py  test_client.py  test_modbusmap.py  test_read.py  test_util.py
tests/unit/task/: test_task.py
